fix overflow bugs on mobile devices in displaying users

--- a/src/components/postCardStyle.css
+++ b/src/components/postCardStyle.css
@@ -74,8 +74,8 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     cursor: default;
     background-color: #007e4f;
-    border-bottom-left-radius: 1.2rem;
-    border-bottom-right-radius: 1.2rem;
+    border-bottom-left-radius: 0.8rem;
+    border-bottom-right-radius: 0.8rem;
     box-sizing: border-box;
 }
 .post-details p{
